--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -18,8 +18,7 @@
 }
 
 .gpt3__navbar-links_logo img {
-    width: 62.56px;
-    height: 16.02px;
+    width: 140px;
 }
 
 .gpt3__navbar-links_container {
@@ -36,10 +35,10 @@
 .gpt3__navbar-links_container p,
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
-    color: white;
+    color: black;
     font-family: var(--font-family);
     font-weight: 500;
-    font-size: var(--font-lg);
+    font-size: var(--font-md);
     line-height: 25px;
     text-transform: capitalize;
 
@@ -47,20 +46,20 @@
     cursor: pointer;
 }
 
-.gpt3__navbar-sign button,
+/* .gpt3__navbar-sign button,
 .gpt3__navbar-menu_container button {
-    padding: 0.8rem 1.8rem;
+    padding: 0.5rem 1.8rem;
     color: white;
-    background: #FF4820;
+    background: #0649F8;
     font-family: var(--font-family);
     font-weight: 500;
-    font-size: var(--font-lg);
+    font-size: var(--font-md);
     line-height: 25px;
     border-radius: 5px;
     border: none;
     outline: none;
     cursor: pointer;
-}
+} */
 
 .gpt3__navbar-menu {
     margin-left: 1rem;
@@ -80,7 +79,7 @@
     flex-direction: column;
 
     text-align: end;
-    background: var(--color-footer);
+    background: var(--color-bg);
     padding: 2rem;
     position: absolute;
     top: 40px;
@@ -88,7 +87,9 @@
     margin-top: 1rem;
     min-width: 210px;
     border-radius: 5px;
-    box-shadow: 0 0 5 rgba(0,0,0,0.2);
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 .gpt3__navbar-menu_container p {
