--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --color-blog: #042c54;
   --color-text: #81AFDD;
   --color-subtext: #FF8A71;
+  --color-primary: #0649F8;
 
   --font-sm: 14px;
   --font-md: 16px;
