--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -72,12 +72,64 @@
 
 .arrow {
     font-size: 24px;
-    color:#444d56;
-    
+    color: #444d56;
+    -webkit-animation: rotate-0-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) reverse both;
+    animation: rotate-0-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) reverse both;
+
+}
+
+@-webkit-keyframes rotate-0-cw {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+}
+
+@keyframes rotate-0-cw {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
 }
 
 .gpt3__navbar-links_container p:hover .arrow {
     color: var(--color-primary);
+    -webkit-animation: rotate-180-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: rotate-180-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes rotate-180-cw {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+}
+
+@keyframes rotate-180-cw {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
 }
 
 
@@ -122,7 +174,7 @@
     right: 0px;
     margin-top: 1rem;
     min-width: 210px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
